# rpcsx-ui-android

./: .gitmodules  AGENTS.md  README.md
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/rpcsx/: CMakeLists.txt  UPSTREAM.md
app/src/main/cpp/rpcsx/android/: CMakeLists.txt
app/src/main/cpp/rpcsx/android/src/: rpcsx-android.cpp
app/src/main/cpp/rpcsx/cmake/: FindWolfSSL.cmake  FindZLIB.cmake
app/src/main/cpp/rpcsx/kernel/: CMakeLists.txt
app/src/main/cpp/rpcsx/kernel/orbis/: CMakeLists.txt
app/src/main/cpp/rpcsx/ps3fw/: cellAdec.cpp  cellAtracXdec.cpp  cellAudio.cpp  cellDmux.cpp  cellGame.cpp  cellGcmSys.cpp  cellSaveData.cpp  cellSpurs.cpp  cellSpursSpu.cpp  cellSysutil.cpp  cellSysutilAvc2.cpp  cellVdec.cpp  sceNpTrophy.cpp  sys_lwmutex_.cpp
app/src/main/cpp/rpcsx/rpcs3/: CMakeLists.txt  module_verifier.hpp
app/src/main/cpp/rpcsx/rpcs3/Crypto/: aes.cpp  sha1.cpp  sha1.h  unedat.cpp  unpkg.h  unself.cpp  unself.h  utils.cpp  utils.h
app/src/main/cpp/rpcsx/rpcs3/Emu/: CMakeLists.txt  GDB.cpp  System.cpp  System.h  localized_string_id.h  perf_meter.cpp  perf_meter.hpp  perf_monitor.cpp  system_progress.cpp
app/src/main/cpp/rpcsx/rpcs3/Loader/: ELF.h  PSF.cpp  PSF.h  TAR.cpp
app/src/main/cpp/rpcsx/rpcs3/dev/: iso.cpp  iso.hpp
app/src/main/cpp/rpcsx/rpcs3/util/: File.cpp  File.h  JITASM.cpp  JITLLVM.cpp  (+17 more)
app/src/main/cpp/rpcsx/rpcsx/: AudioOut.hpp  io-device.cpp  io-device.hpp  io-devices.hpp  ipmi.cpp  ipmi.hpp  linker.cpp  linker.hpp  main.cpp  ops.cpp  thread.cpp  vfs.cpp  vfs.hpp  vm.cpp  vm.hpp
app/src/main/cpp/rpcsx/rx/: CMakeLists.txt
(+409 files in other folders)
